
syntax = "proto3";


package lambda;

// import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

option go_package = "./;aws";


message CreateFunctionRequest {
    string name = 1;
    string language = 2;
    string runtime = 3;
    string code  = 4;
}

message LambdaResponse {
    string message = 1;
    bool ok = 2;
}

message TestFunctionResquest {
    string function_name = 1;
} 

service LambdaService {
    rpc CreateFunction(CreateFunctionRequest) returns (LambdaResponse) {};
    rpc TestFunction(TestFunctionResquest) returns (LambdaResponse) {};
}